fixed spacing issue;

--- a/src/App.css
+++ b/src/App.css
@@ -197,7 +197,7 @@ a {
 }
 
 a:hover {
-   color: rgb(68, 99, 138);
+   color: rgb(82, 117, 163);
 }
 
 .heading {
